@@ -392,3 +392,22 @@ _Description: Invalid logical volume or volume group name
  with "snapshot".
  .
  Please choose a different name.
+
+Template: partman-lvm/device_remove_lvm
+Type: boolean
+Default: false
+_Description: Remove existing logical volume data?
+ The selected device already contains logical volumes and/or
+ volume groups from a previous LVM installation, which must be removed
+ from the disk before creating any partitions.
+ .
+ Note that this will also permanently erase any data currently on the
+ logical volumes.
+
+Template: partman-lvm/device_remove_lvm_span
+Type: error
+_Description: Unable to automatically remove LVM data
+ Because the volume group(s) on the selected device also consist of
+ physical volumes on other devices, it is not considered safe to remove
+ its LVM data automatically. If you wish to use this device for
+ partitioning, please remove its LVM data first.
