@@ -3,8 +3,12 @@ partman-lvm (57) UNRELEASED; urgency=low
   * Moved definitions.sh to ./lib/base.sh. Requires partman-base (>= 114).
   * Move lvm_tools.sh to ./lib/lvm-base.sh.
   * Change priority to optional to allow dynamic loading by partman-base.
+  * Add new function library lvm-remove.sh to support removing all LVM data
+    from a device (moved from partman-auto, incl. corresponding templates).
+    Reword the error template to better describe the reason we refuse to
+    erase the LVM data automatically.
 
- -- Frans Pop <fjp@debian.org>  Thu, 06 Dec 2007 16:12:06 +0100
+ -- Frans Pop <fjp@debian.org>  Sat, 08 Dec 2007 15:50:29 +0100
 
 partman-lvm (56) unstable; urgency=low
 
