@@ -2,14 +2,15 @@ partman-auto (73) UNRELEASED; urgency=low
 
   * Moved definitions.sh to ./lib/base.sh. Requires partman-base (>= 114).
   * Move recipes.sh and auto-shared.sh to ./lib/.
-  * Moved lvm_tools.sh to ./lib/lvm-base.sh. Requires partman-lvm (>= 57).
   * auto-shared.sh: let wipe_disk() use the create_new_label function provided
     by partman-partitioning (54). Don't prompt for disk label to use unless
     the default is invalid.
     Patch is based on a change first proposed by Jérémy Bobbio in #396023.
   * Major whitespace cleanup and some coding style improvements.
+  * Move code to erase existing LVM data from a device to partman-lvm.
+    Requires partman-lvm (>= 57).
 
- -- Frans Pop <fjp@debian.org>  Sat, 08 Dec 2007 13:57:59 +0100
+ -- Frans Pop <fjp@debian.org>  Sat, 08 Dec 2007 14:39:30 +0100
 
 partman-auto (72) unstable; urgency=low
 
